# Rikka

./: .gitignore  CMakeLists.txt  README.md
Demos/: CMakeLists.txt  Demo1.cpp  Demo2.cpp  Demo3.cpp
DependenciesSrc/: CMakeLists.txt
DependenciesSrc/glad/: glad.c
Rikka/: CMakeLists.txt  Rikka.hpp  RikkaColor.hpp  RikkaCore.hpp  RikkaDraw.hpp  RikkaInput.hpp  RikkaMacros.hpp  RikkaMath.hpp  RikkaRenderer.hpp  RikkaShader.hpp  RikkaShaders.hpp  RikkaTexture.hpp  RikkaTypes.hpp
Rikka/Core/: RikkaCore.cpp  RikkaDraw.cpp  RikkaInput.cpp  RikkaMath.cpp  RikkaTexture.cpp
Rikka/Shaders/: Shader.cpp  ShaderCode.h  Shaders.cpp
RikkaEngineSrc/: CMakeLists.txt  Macros.hpp
RikkaEngineSrc/OpenGL/: OpenGL_Core.cpp  OpenGL_Core.hpp
RikkaEngineSrc/OpenGL/Shaders/: Rectangle.hpp
include/Rikka/: Rikka.hpp  Types.hpp
include/Rikka/OpenGL/: OpenGL_Core.hpp
include/glad/: glad.h
